# main application directives

set(SOURCES .
    core core/commands
    modules/authentication
    modules/serial
    modules/network
    modules/filesystem
    modules/filesystem/flash
    modules/usb_serial
    modules/config_file
    modules/translations
)

if(WIFI_SERVICE)
    if(SSDP_SERVICE)
        list(APPEND SOURCES "modules/ssdp")
    endif()

    if(MDNS_SERVICE)
        list(APPEND SOURCES "modules/mdns")
    endif()

    if(WEB_SERVICES)
        list(APPEND SOURCES "modules/http")
        list(APPEND SOURCES "modules/http/handlers")
        list(APPEND SOURCES "modules/websocket")
        set(WEBEMBEDDEDFILES "embedded/favicon.ico.gz" "embedded/index.html.gz")
    endif()

    if(TELNET_SERVICE)
        list(APPEND SOURCES "modules/socket_server")
    endif()

    if(NOTIFICATIONS_SERVICE)
        list(APPEND SOURCES "modules/notifications")
    endif()
endif()

if(BT_SERVICE)
    # TODO
endif()

if(SD_CARD_SERVICE)
    list(APPEND SOURCES "modules/filesystem/sd")
endif()

if(UPDATE_SERVICE)
    list(APPEND SOURCES "modules/update")
endif()

if(GCODE_HOST_SERVICE)
    list(APPEND SOURCES "modules/gcode_host")
endif()

 if(TFT_UI_SERVICE)
    list(APPEND SOURCES "display")
    list(APPEND SOURCES "modules/rendering")
    if(TARGET_FW_MARLIN)
       list(APPEND SOURCES "display/3dprinter/marlin")
       list(APPEND SOURCES "display/3dprinter/marlin/screens")
       list(APPEND SOURCES "display/3dprinter/marlin/components")
    elseif(TARGET_FW_REPETIER)
       list(APPEND SOURCES "display/3dprinter/repetier")
       list(APPEND SOURCES "display/3dprinter/repetier/screens")
       list(APPEND SOURCES "display/3dprinter/repetier/components")
    elseif(TARGET_FW_SMOOTHIEWARE)
       list(APPEND SOURCES "display/3dprinter/smoothieware")
       list(APPEND SOURCES "display/3dprinter/smoothieware/screens")
       list(APPEND SOURCES "display/3dprinter/smoothieware/components")
    elseif(TARGET_FW_GRBL)
       list(APPEND SOURCES "display/cnc/grbl")
       list(APPEND SOURCES "display/3dprinter/grbl/screens")
       list(APPEND SOURCES "display/3dprinter/grbl/components")
    endif()
    if(ESP32_2432S028R)
        if(TARGET_FW_MARLIN)
           list(APPEND SOURCES "display/3dprinter/marlin/res_320_240")
           set(INCLUDES_DISPLAY "display/3dprinter/marlin/res_320_240")
        elseif(TARGET_FW_REPETIER)
           list(APPEND SOURCES "display/3dprinter/repetier/res_320_240")
           set(INCLUDES_DISPLAY "display/3dprinter/repetier/res_320_240")
        elseif(TARGET_FW_SMOOTHIEWARE)
           list(APPEND SOURCES "display/3dprinter/smoothieware/res_320_240")
           set(INCLUDES_DISPLAY "display/3dprinter/smoothieware/res_320_240")
        elseif(TARGET_FW_GRBL)
           list(APPEND SOURCES "display/cnc/grbl/res_320_240")
           set(INCLUDES_DISPLAY "display/cnc/grbl/res_320_240")
        endif()
    elseif(ESP32S3_8048S070 OR ESP32S3_8048S050 OR ESP32S3_8048S050 OR ESP32S3_8048S043 OR ESP32S3_HMI43V3)
        if(TARGET_FW_MARLIN)
           list(APPEND SOURCES "display/3dprinter/marlin/res_800_480")
           set(INCLUDES_DISPLAY "display/3dprinter/marlin/res_800_480")
        elseif(TARGET_FW_REPETIER)
           list(APPEND SOURCES "display/3dprinter/repetier/res_800_480")
           set(INCLUDES_DISPLAY "display/3dprinter/repetier/res_800_480")
        elseif(TARGET_FW_SMOOTHIEWARE)
           list(APPEND SOURCES "display/3dprinter/smoothieware/res_800_480")
           set(INCLUDES_DISPLAY "display/3dprinter/smoothieware/res_800_480")
        elseif(TARGET_FW_GRBL)
           list(APPEND SOURCES "display/cnc/grbl/res_800_480")
           set(INCLUDES_DISPLAY "display/cnc/grbl/res_800_480")
        endif()
    elseif(ESP32_ROTRICS_DEXARM35 OR ESP32S3_ZX3D50CE02S_USRC_4832 OR ESP32_3248S035C OR ESP32_3248S035R)
        if(TARGET_FW_MARLIN)
           list(APPEND SOURCES "display/3dprinter/marlin/res_480_320")
           set(INCLUDES_DISPLAY "display/3dprinter/marlin/res_480_320")
        elseif(TARGET_FW_REPETIER)
           list(APPEND SOURCES "display/3dprinter/repetier/res_480_320")
           set(INCLUDES_DISPLAY "display/3dprinter/repetier/res_480_320")
        elseif(TARGET_FW_SMOOTHIEWARE)
           list(APPEND SOURCES "display/3dprinter/smoothieware/res_480_320")
           set(INCLUDES_DISPLAY "display/3dprinter/smoothieware/res_480_320")  
        elseif(TARGET_FW_GRBL)
           list(APPEND SOURCES "display/cnc/grbl/res_480_320")
           set(INCLUDES_DISPLAY "display/cnc/grbl/res_480_320")
        endif()
    elseif(ESP32S3_4827S043)
        if(TARGET_FW_MARLIN)
           list(APPEND SOURCES "display/3dprinter/marlin/res_480_272")
           set(INCLUDES_DISPLAY "display/3dprinter/marlin/res_480_272")
        elseif(TARGET_FW_REPETIER)
           list(APPEND SOURCES "display/3dprinter/repetier/res_480_272")
           set(INCLUDES_DISPLAY "display/3dprinter/repetier/res_480_320")
        elseif(TARGET_FW_SMOOTHIEWARE)
           list(APPEND SOURCES "display/3dprinter/smoothieware/res_480_272")
           set(INCLUDES_DISPLAY "display/3dprinter/smoothieware/res_480_272")  
        elseif(TARGET_FW_GRBL)
           list(APPEND SOURCES "display/cnc/grbl/res_480_272")
           set(INCLUDES_DISPLAY "display/cnc/grbl/res_480_272")
        endif()
    endif()
endif()

if(TARGET_FW_MARLIN)
    list(APPEND SOURCES "target/3dprinter/marlin")
elseif(TARGET_FW_REPETIER)
   list(APPEND SOURCES "target/3dprinter/repetier")
elseif(TARGET_FW_SMOOTHIEWARE)
    list(APPEND SOURCES "target/3dprinter/smoothieware")
elseif(TARGET_FW_GRBL)
    list(APPEND SOURCES "target/cnc/grbl")
endif()

set(INCLUDES .
    ${INCLUDES_DISPLAY}
    core/includes
    modules)
idf_component_register(SRC_DIRS ${SOURCES}
    INCLUDE_DIRS ${INCLUDES}
    EMBED_FILES ${WEBEMBEDDEDFILES}  ${UIEMBEDDEDFILES})

unset(TFT_UI_SERVICE CACHE)
unset(WIFI_SERVICE CACHE)
unset(SSDP_SERVICE CACHE)
unset(MDNS_SERVICE CACHE)
unset(BT_SERVICE CACHE)
unset(WEB_SERVICES CACHE)
unset(TELNET_SERVICE CACHE)
unset(WS_SERVICE CACHE)
unset(SD_CARD_SERVICE CACHE)
unset(NOTIFICATIONS_SERVICE CACHE)
unset(UPDATE_SERVICE CACHE)
unset(GCODE_HOST_SERVICE CACHE)
